# group_project_se489

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.py  train_model_cml.py
.github/workflows/: Docker_building.yaml  cml.yaml  codecheck.yaml  tests.yaml
config/: config.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: data_ingestion.ipynb  model_evaluation_with_mlflow.ipynb  model_training.ipynb  prepare_base_model.ipynb
se489_group_project/: __init__.py  predict_model.py
se489_group_project/components/: data_ingestion.py  model_evalution_mlflow.py  model_training.py  prepare_base_model.py
se489_group_project/config/: configuration.py
se489_group_project/constants/: __init__.py
se489_group_project/data/: make_dataset.py
se489_group_project/model_classes/: config_model_classes.py
se489_group_project/models/: model.py
se489_group_project/pipeline/: pipeline_01_getting_data.py  pipeline_02_base_model_creation.py  pipeline_03_model_training.py  pipeline_04_model_evaluation.py  pipeline_prediction.py
se489_group_project/utility/: common.py
se489_group_project/utils/: common.py
se489_group_project/visualizations/: __init__.py  cprofile_stats_data_ingestion.prof  visualize.py
templates/: index.html
tests/: conftest.py  data_ingestion_test.py  model_evaluation_mlflow_test.py  model_training_test.py  prepare_base_model_test.py  test_data.py
